<resources>
    <string name="app_name">Tobanggatos</string>
    <string name="cari">Inputos Disinitos Oktos!</string>
    <string name="convert">Ubahtos</string>
    <string name="salin">Salintos</string>
    <string name="convert2">Ubah</string>
    <string name="salin2">Salin</string>
    <string name="bagga">>_ TOBANGGA!!</string>
    <string name="img">Swaptos</string>
    <string name="notif">Bahasa Indo -> Bahasatos Tobanggatos</string>
    <string name="notif2">Bahasatos Purbatos -> Bahasa Indo</string>
</resources>