<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:drawableLeft="@drawable/ic_baseline_notifications_active_24"
        android:text="@string/notif"
        android:background="@color/red"
        android:textSize="20sp"
        android:visibility="gone"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/notify2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:drawableLeft="@drawable/ic_baseline_notifications_active_24"
        android:text="@string/notif2"
        android:visibility="gone"
        android:background="@color/red"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="28dp"
        android:layout_marginTop="70dp"
        android:text="@string/bagga"
        android:textSize="20sp"
        android:textColor="@color/purp" />

    <ImageView
        android:id="@+id/swaptos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="70dp"
        android:onClick="swapTos"
        android:src="@drawable/ic_baseline_refresh_24"
        android:contentDescription="@string/img" />

    <!-- CLONE -->
    <ImageView
        android:id="@+id/swaptos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="70dp"
        android:visibility="gone"
        android:onClick="swapTos2"
        android:src="@drawable/ic_baseline_refresh2_24"
        android:contentDescription="@string/img" />
    <!-- END CLONE -->

    <EditText
        android:id="@+id/et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/et_rounded"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/gotham"
        android:hint="@string/cari"
        android:inputType="textFilter|textNoSuggestions"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/semgray"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_grad"
        android:fontFamily="@font/ubuntu"
        android:onClick="displayEditText"
        android:text="@string/convert2"
        android:textColor="@color/gray"
        android:textSize="24sp" />

    <!-- CLONE -->
    <Button
        android:id="@+id/btn2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_grad"
        android:fontFamily="@font/ubuntu"
        android:onClick="displayEditText2"
        android:text="@string/convert"
        android:textColor="@color/gray"
        android:visibility="gone"
        android:textSize="24sp" />
    <!-- END CLONE -->

    <TextView
        android:id="@+id/tv"
        android:textSize="15sp"
        android:drawableTop="@drawable/ic_baseline_textsms_24"
        android:drawablePadding="5dp"
        android:textColor="@color/gray"
        android:paddingStart="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/gotham"
        android:layout_below="@id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSalin"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_grad"
        android:fontFamily="@font/ubuntu"
        android:onClick="setClipboard"
        android:text="@string/salin2"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:visibility="gone" />

    <!-- CLONE -->
    <TextView
        android:id="@+id/tv2"
        android:textSize="15sp"
        android:drawableTop="@drawable/ic_baseline_textsms_24"
        android:drawablePadding="5dp"
        android:textColor="@color/gray"
        android:paddingStart="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/gotham"
        android:layout_below="@id/btn2"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSalin2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_grad"
        android:fontFamily="@font/ubuntu"
        android:onClick="setClipboard2"
        android:text="@string/salin"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:visibility="gone" />
    <!-- END CLONE -->


</RelativeLayout>